cluster/core/netpol/pinchflat.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: pinchflat
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pinchflat-ingress
  namespace: pinchflat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pinchflat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: traefik
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8945
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pinchflat-egress
  namespace: pinchflat
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pinchflat
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: adguard
          podSelector:
            matchLabels:
              app.kubernetes.io/name: adguard-home
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.10/32
        - ipBlock:
            cidr: 192.168.0.77/32
        - ipBlock:
            cidr: 192.168.0.78/32
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: sabnzbd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - port: 8888
          protocol: TCP
